--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
+  },
+  "scripts": {
+    "start": "npx tailwindcss -i ./input.css -o ./output.css --watch"
   }
 }
